--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "type": "git",
     "url": "https://github.com/jinhuang712/Digit-Recognition.git"
   },
-  "version": "1.0.0",
+  "version": "0.0.0",
+  "license": "UNLICENSED",
+  "private": true,
   "dependencies": {
     "@tensorflow/tfjs": "latest",
-    "@tensorflow/tfjs-core": "^1.1.2"
+    "rollup": "latest"
   }
 }
